# anti-theft-deter

./: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt  train_yolo.py
utils/: __init__.py  app.py  benchmark.py  config.py  database.py  gui.py  monitor.py
